[gd_scene load_steps=13 format=3 uid="uid://c7w3ggv0adwjq"]

[ext_resource type="Script" path="res://UI/Items/Items.gd" id="1_56j1j"]
[ext_resource type="Script" path="res://UI/SafeControl/safe_control.gd" id="1_ara7a"]
[ext_resource type="Texture2D" uid="uid://be41a4uhebmqr" path="res://assets/tool_hammer.png" id="2_hmp30"]
[ext_resource type="Shader" path="res://UI/Book/Blur.gdshader" id="2_ktq1t"]
[ext_resource type="Theme" uid="uid://dsgu4tme5hp8f" path="res://Themes/Menu/menu_theme.tres" id="3_6vlfm"]
[ext_resource type="StyleBox" uid="uid://by0teqdyeo3sc" path="res://UI/Items/ButtonNormal.tres" id="4_eiyf8"]
[ext_resource type="FontFile" uid="uid://ddsrcnmbc0ew7" path="res://assets/fonts/Patrick_Hand_SC/PatrickHandSC-Regular.ttf" id="4_i3axa"]
[ext_resource type="StyleBox" uid="uid://b387w3gu5d7q" path="res://UI/Items/YesNoButton.tres" id="7_sn7ju"]
[ext_resource type="PackedScene" uid="uid://shxvfcvqf53c" path="res://UI/Items/Shield/Shield.tscn" id="8_ow40f"]
[ext_resource type="PackedScene" uid="uid://cg2m44e470200" path="res://UI/Items/Shield/ShieldButton.tscn" id="8_wb48c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6xrc4"]
shader = ExtResource("2_ktq1t")
shader_parameter/color = Color(1, 1, 1, 0.8)
shader_parameter/blur_direction = 16.0
shader_parameter/blur_quality = 3.0
shader_parameter/blur_size = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll2ot"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 4
shadow_offset = Vector2(4, 4)

[node name="Items" type="CanvasLayer"]
script = ExtResource("1_56j1j")

[node name="HammerControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitButton" type="Button" parent="HammerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="Blur" type="ColorRect" parent="HammerControl"]
material = SubResource("ShaderMaterial_6xrc4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HammerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="HammerControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ara7a")

[node name="CenterContainer" type="CenterContainer" parent="HammerControl/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="HammerControl/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll2ot")

[node name="MarginContainer" type="MarginContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Question" type="Label" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_6vlfm")
theme_override_font_sizes/font_size = 48
text = "How many do you want to use?
"

[node name="HBoxContainer" type="HBoxContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="MinusAspectRatioContainer" type="AspectRatioContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="MinusButton" type="Button" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusAspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_eiyf8")

[node name="CenterContainer" type="CenterContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusAspectRatioContainer/MinusButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusAspectRatioContainer/MinusButton/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusAspectRatioContainer/MinusButton/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 64
text = "-"

[node name="Quantity" type="Label" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 64
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlusAspectRatioContainer" type="AspectRatioContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="PlusButton" type="Button" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusAspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_eiyf8")

[node name="CenterContainer" type="CenterContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusAspectRatioContainer/PlusButton"]
layout_mode = 2
offset_top = -3.0
offset_right = 96.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusAspectRatioContainer/PlusButton/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 15

[node name="Label" type="Label" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusAspectRatioContainer/PlusButton/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 64
text = "+"

[node name="ConfirmButton" type="Button" parent="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("7_sn7ju")
text = "Confirm (x8)"

[node name="ShieldControl" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExitShieldButton" type="Button" parent="ShieldControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
flat = true

[node name="Blur" type="ColorRect" parent="ShieldControl"]
material = SubResource("ShaderMaterial_6xrc4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="ShieldControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="ShieldControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ara7a")

[node name="CenterContainer" type="CenterContainer" parent="ShieldControl/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="ShieldControl/MarginContainer/CenterContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ll2ot")

[node name="MarginContainer" type="MarginContainer" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Question" type="Label" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_6vlfm")
theme_override_font_sizes/font_size = 48
text = "Use a shield to continue?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="YesShieldButton" type="Button" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("7_sn7ju")
text = "Yes"

[node name="NoShieldButton" type="Button" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("7_sn7ju")
text = "No"

[node name="Note" type="Label" parent="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_6vlfm")
theme_override_font_sizes/font_size = 32
text = "You will lose X activate hammers if you quit"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ara7a")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="HammerTextureButton" type="TextureButton" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_hmp30")

[node name="ExtraHammers" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Extra2" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/ExtraHammers"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 128

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/ExtraHammers/Extra2"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_hmp30")

[node name="Extra1" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/ExtraHammers"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 64

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/ExtraHammers/Extra1"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_hmp30")

[node name="InStock" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/InStock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 35
theme_override_constants/margin_bottom = 25

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton/InStock/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1

[node name="ShieldButton" parent="MarginContainer/MarginContainer/VBoxContainer" instance=ExtResource("8_wb48c")]
layout_mode = 2

[node name="ExtraShields" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Extra2" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/ExtraShields"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 128

[node name="Shield" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/ExtraShields/Extra2" instance=ExtResource("8_ow40f")]
layout_mode = 2

[node name="Extra1" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/ExtraShields"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_right = 64

[node name="Shield" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/ExtraShields/Extra1" instance=ExtResource("8_ow40f")]
layout_mode = 2

[node name="InStock" type="Control" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/InStock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/ShieldButton/InStock/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_i3axa")
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1

[connection signal="pressed" from="HammerControl/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MinusAspectRatioContainer/MinusButton" to="." method="_on_minus_button_pressed"]
[connection signal="pressed" from="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlusAspectRatioContainer/PlusButton" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="HammerControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="ShieldControl/ExitShieldButton" to="." method="_on_exit_shield_button_pressed"]
[connection signal="pressed" from="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/YesShieldButton" to="." method="_on_yes_shield_button_pressed"]
[connection signal="pressed" from="ShieldControl/MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NoShieldButton" to="." method="_on_no_shield_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/HammerTextureButton" to="." method="_on_hammer_texture_button_pressed"]
